// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as landscape 1`] = `
<Thumb
  className=""
  color="transparent"
  height={60}
  icon=""
  iconColor="neutral-light"
  iconGroup=""
  image="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Rohde_%26_Schwarz_Logo.svg/800px-Rohde_%26_Schwarz_Logo.svg.png"
  localImg=""
  offlineEnabled={false}
  width={120}
>
  <div
    className="display:flex flex:items-center flex:content-center border:rounded color:transparent"
    style={
      Object {
        "WebkitFlex": "0 0 120px",
        "flex": "0 0 120px",
        "height": "60px",
        "width": "120px",
      }
    }
  >
    <img
      className="w:100p border:rounded"
      src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Rohde_%26_Schwarz_Logo.svg/800px-Rohde_%26_Schwarz_Logo.svg.png"
    />
  </div>
</Thumb>
`;

exports[`renders correctly as square 1`] = `
<Thumb
  className=""
  color="transparent"
  height={60}
  icon=""
  iconColor="neutral-light"
  iconGroup=""
  image="https://randomuser.me/api/portraits/women/50.jpg"
  localImg=""
  offlineEnabled={false}
  width={60}
>
  <div
    className="display:flex flex:items-center flex:content-center border:rounded color:transparent"
    style={
      Object {
        "WebkitFlex": "0 0 60px",
        "flex": "0 0 60px",
        "height": "60px",
        "width": "60px",
      }
    }
  >
    <img
      className="w:100p border:rounded"
      src="https://randomuser.me/api/portraits/women/50.jpg"
    />
  </div>
</Thumb>
`;
